# gig

./: .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  README.md  appveyor.yml  deno.yml  egg.yml  gig  hello.yml  mkalias.sh
ci/: before_deploy.ps1  before_deploy.sh
src/: cli.yml  main.rs
src/scaffold/: hello.yml
