[package]
name = "gig"
version = "0.2.5-alpha.0"
authors = ["Ian Fabs <ianfabs@outlook.com>"]
edition = "2018"
license = "MIT"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/you/grrs"
repository = "https://github.com/you/grrs"
keywords = ["cli", "generate", "code", "yaml"]
categories = ["command-line-utilities", "yaml"]
build = "build.rs"

[dependencies]
clap = { version = "2.33.0", features=["yaml"]} 
yaml-rust = "0.4"
git2 = "0.8.0"
